# RFSN-COMPANION

./: README.md
.codex/environments/: environment-2.toml  environment.toml
companion_unified/: New project.code-workspace  README.md  pyproject.toml
companion_unified/companion/: config.py  main.py
companion_unified/companion/adapters/: gcal_reader_google.py  gmail_reader_google.py  google_oauth.py  moltbook_http.py
companion_unified/companion/auto_approve/: engine.py  policy.py
companion_unified/companion/controllers/: calendar_controller.py  coding_controller.py  messages_controller.py  moltbook_controller.py
companion_unified/companion/core/: arbiter.py  gate.py  ledger.py  types.py
companion_unified/companion/llm/: __init__.py  promptlib.py  router.py  sanitize.py  schemas.py  types.py
companion_unified/companion/llm/providers/: anthropic_http.py  ollama_http.py  openai_http.py
companion_unified/companion/queues/: calendar_queue.py  moltbook_queue.py  send_queue.py
companion_unified/companion/schedulers/: calendar_scheduler.py  coding_scheduler.py  messages_scheduler.py  moltbook_scheduler.py
companion_unified/companion_exec/: daemon.py  gcal_writer.py  gmail_writer.py  moltbook_writer.py  tokens_hmac.py
companion_unified/companion_ui/: app.py  auth.py  io.py
companion_unified/companion_ui/templates/: artifact_view.html  artifacts.html  chat.html  control.html  edit_event.html  edit_moltbook.html  edit_send.html  index.html  login.html
companion_unified/tests/: test_auto_approve_engine.py  test_auto_approve_policy.py  test_tokens.py
